# Masto2Bsky

./: .gitignore  README.md  main.py  masto2bluesky.py  masto2bsky.py  pyproject.toml
masto2bsky/: __init__.py  reposter.py  toot_parser.py
scripts/: save_bsky_session.py  save_mastodon_token.py
